--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "me.jpg"
   name             : "Mozheng Liao"
   pronouns         : # example: "she/her"  
-  bio              : "Incoming M.S. Student@USTC, advised by Prof. Xiaojun Chang."
+  bio              : "M.S. Student@USTC, advised by Prof. Xiaojun Chang."
   location         : "HeFei, China"
   employer         : # "Red Brick University"
   uri              : # URL
